@@ -3,6 +3,9 @@ import java.io.File
 import Tarball.createTarballSettings
 import sbt.util
 import sbtlicensereport.license.{LicenseInfo, LicenseCategory, DepModuleInfo}
+import ReleaseSettings._
+
+import scala.language.implicitConversions
 
 val orgName = "io.unitycatalog"
 val artifactNamePrefix = "unitycatalog"
@@ -11,18 +14,18 @@ lazy val commonSettings = Seq(
   organization := orgName,
   // Compilation configs
   initialize := {
-    // Assert that the JVM is at least Java 11
+    // Assert that the JVM is at least Java 17
     val _ = initialize.value  // ensure previous initializations are run
     assert(
-      sys.props("java.specification.version").toDouble >= 11,
-      "Java 11 or above is required to run this project.")
+      sys.props("java.specification.version").toDouble >= 17,
+      "Java 17 or above is required to run this project.")
   },
-  javacOptions ++= Seq(
+  Compile / compile / javacOptions ++= Seq(
     "-Xlint:deprecation",
     "-Xlint:unchecked",
-    "-source", "1.8",
-    "-target", "1.8",
-    "-g:source,lines,vars"
+    "-source", "17",
+    "-target", "17",
+    "-g:source,lines,vars",
   ),
   resolvers += Resolver.mavenLocal,
   autoScalaLibrary := false,
@@ -86,9 +89,11 @@ def javaCheckstyleSettings(configLocation: File) = Seq(
 
 lazy val client = (project in file("clients/java"))
   .enablePlugins(OpenApiGeneratorPlugin)
+  .disablePlugins(JavaFormatterPlugin)
   .settings(
     name := s"$artifactNamePrefix-client",
     commonSettings,
+    javaOnlyReleaseSettings,
     libraryDependencies ++= Seq(
       "com.fasterxml.jackson.core" % "jackson-annotations" % jacksonVersion,
       "com.fasterxml.jackson.core" % "jackson-core" % jacksonVersion,
@@ -140,6 +145,8 @@ lazy val apiDocs = (project in file("api"))
     }
   )
 
+// Define the custom task key
+lazy val populateTestDB = taskKey[Unit]("Run PopulateTestDatabase main class from the test folder")
 
 lazy val server = (project in file("server"))
   .dependsOn(client % "test->test")
@@ -147,9 +154,12 @@ lazy val server = (project in file("server"))
   .settings (
     name := s"$artifactNamePrefix-server",
     commonSettings,
+    javaOnlyReleaseSettings,
     javaCheckstyleSettings(file("dev") / "checkstyle-config.xml"),
     libraryDependencies ++= Seq(
       "com.linecorp.armeria" %  "armeria" % "1.28.4",
+      // Netty dependencies
+      "io.netty" % "netty-all" % "4.1.111.Final",
       "jakarta.annotation" % "jakarta.annotation-api" % "3.0.0" % Provided,
       // Jackson dependencies
       "com.fasterxml.jackson.core" % "jackson-annotations" % jacksonVersion,
@@ -223,8 +233,15 @@ lazy val server = (project in file("server"))
     // Define the simple generate command to generate model codes
     generate := {
       val _ = openApiGenerate.value
-    }
-  )
+    },
+
+    populateTestDB := {
+      val log = streams.value.log
+      (Test / runMain).toTask(s" io.unitycatalog.server.utils.PopulateTestDatabase").value
+    },
+
+    Test / javaOptions += s"-Duser.dir=${(ThisBuild / baseDirectory).value.getAbsolutePath}",
+)
 
 lazy val cli = (project in file("examples") / "cli")
   .dependsOn(server % "compile->compile;test->test")
@@ -233,6 +250,7 @@ lazy val cli = (project in file("examples") / "cli")
     name := s"$artifactNamePrefix-cli",
     mainClass := Some(orgName + ".cli.UnityCatalogCli"),
     commonSettings,
+    skipReleaseSettings,
     javaCheckstyleSettings(file("dev") / "checkstyle-config.xml"),
     libraryDependencies ++= Seq(
       "commons-cli" % "commons-cli" % "1.7.0",
@@ -253,6 +271,7 @@ lazy val cli = (project in file("examples") / "cli")
       "org.apache.hadoop" % "hadoop-client-runtime" % "3.4.0",
       "de.vandermeer" % "asciitable" % "0.3.2",
       // for s3 access
+      "org.fusesource.jansi" % "jansi" % "2.4.1",
       "com.amazonaws" % "aws-java-sdk-core" % "1.12.728",
       "org.apache.hadoop" % "hadoop-aws" % "3.4.0",
       "com.google.guava" % "guava" % "31.0.1-jre",
@@ -266,7 +285,28 @@ lazy val root = (project in file("."))
   .aggregate(client, server, cli)
   .settings(
     name := s"$artifactNamePrefix",
-    createTarballSettings()
+    createTarballSettings(),
+    rootReleaseSettings
+  )
+
+lazy val spark = (project in file("connectors/spark"))
+  .dependsOn(client % "compile->compile;test->test")
+  .dependsOn(server % "test->test")
+  .settings(
+    name := s"$artifactNamePrefix-spark",
+    scalaVersion := "2.13.14",
+    commonSettings,
+    javaOptions ++= Seq(
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    ),
+    javaCheckstyleSettings(file("dev") / "checkstyle-config.xml"),
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-sql" % "4.0.0-preview1",
+      // Test dependencies
+      "junit" %  "junit" % "4.13.2" % Test,
+      "com.github.sbt" % "junit-interface" % "0.13.3" % Test,
+      "io.delta" %% "delta-spark" % "4.0.0rc1" % Test,
+    ),
   )
 
 def generateClasspathFile(targetDir: File, classpath: Classpath): Unit = {
